tumblr needs doctype and html tag on separate line

--- a/ballpoint.html
+++ b/ballpoint.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+
+<html>
 
 	<!--  HTML5 Ballpoint theme for Tumblr made by Jonathan Bell (jonathanbell.ca). Changelog:
 
