--- a/ballpoint.html
+++ b/ballpoint.html
@@ -487,7 +487,7 @@
 		<footer>
 
 			{block:IfEndlessScrolling}<div style="visibility: hidden;">{/block:IfEndlessScrolling}
-			{block:IfShowCopywright}<p style="padding: 1.5em 0 0 7px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="padding: 0 0 0 7px;"><small><a href="http://www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr theme">Ballpoint</a> by <a href="http://webdesign.jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
+			{block:IfShowCopywright}<p style="padding: 1.5em 0 0 7px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="padding: 0 0 0 7px;"><small><a href="http://www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr theme">Ballpoint</a> by <a href="http://jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
 			{block:IfEndlessScrolling}</div>{/block:IfEndlessScrolling}
 
 		</footer>
