Support Tumblr's move to SSL (avoid CORS errors).

--- a/ballpoint.html
+++ b/ballpoint.html
@@ -194,13 +194,13 @@
 		<!--[if lt IE 8]><script>document.createElement("header");document.createElement("footer");document.createElement("nav");document.createElement("article");document.createElement("section");</script><![endif]-->
 
 		<!-- add media query support for older browsers -->
-		<script src="http://static.tumblr.com/uoxxoej/pIdlrxepo/css3-mediaqueries.js"></script>
+		<script src="//static.tumblr.com/uoxxoej/pIdlrxepo/css3-mediaqueries.js"></script>
 
 		<!-- jQuery -->
-		<script src="http://static.tumblr.com/uoxxoej/czDls33vg/jquery.js"></script>
+		<script src="//static.tumblr.com/uoxxoej/czDls33vg/jquery.js"></script>
 
 		<!-- responsive videos -->
-  	<script src="http://static.tumblr.com/uoxxoej/xTOm605fx/jquery.fitvids.js"></script>
+  	<script src="//static.tumblr.com/uoxxoej/xTOm605fx/jquery.fitvids.js"></script>
 
 	</head>
 
@@ -236,7 +236,7 @@
 
 			<ul>
 			{block:Twitter}
-			<li><a {Target} href="http://twitter.com/{TwitterUsername}">Twitter</a></li>
+			<li><a {Target} href="//twitter.com/{TwitterUsername}">Twitter</a></li>
 			{/block:Twitter}
 			{block:AskEnabled}
 			<li><a href="/ask">{AskLabel}</a></li>
@@ -258,7 +258,7 @@
 			{/block:IfShowFollowing}
 
 			{block:IfEndlessScrolling}
-				{block:IfShowCopywright}<p style="margin-top: 10px; padding-bottom: 0px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="margin-top: 0px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 0px;"><small><a href="http://www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr Theme">Ballpoint</a> by <a href="http://webdesign.jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
+				{block:IfShowCopywright}<p style="margin-top: 10px; padding-bottom: 0px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="margin-top: 0px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 0px;"><small><a href="//www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr Theme">Ballpoint</a> by <a href="//webdesign.jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
 			{/block:IfEndlessScrolling}
 
 		</nav>
@@ -487,7 +487,7 @@
 		<footer>
 
 			{block:IfEndlessScrolling}<div style="visibility: hidden;">{/block:IfEndlessScrolling}
-			{block:IfShowCopywright}<p style="padding: 1.5em 0 0 7px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="padding: 0 0 0 7px;"><small><a href="http://www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr theme">Ballpoint</a> by <a href="http://jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
+			{block:IfShowCopywright}<p style="padding: 1.5em 0 0 7px;">&copy; {Title}</p><!-- If you were nice, you'd leave this.-->{/block:IfShowCopywright}<p style="padding: 0 0 0 7px;"><small><a href="//www.tumblr.com/themes/by/jonnymilano" title="Ballpoint, a Tumblr theme">Ballpoint</a> by <a href="//jonathanbell.ca" title="Jonathan Bell">JB</a></small></p>
 			{block:IfEndlessScrolling}</div>{/block:IfEndlessScrolling}
 
 		</footer>
@@ -502,12 +502,12 @@
 
     </script>
 
-		{block:IfEndlessScrolling}<script src="http://static.tumblr.com/uoxxoej/Buols1r7u/jquery.infinitescroll.min.js"></script>
+		{block:IfEndlessScrolling}<script src="//static.tumblr.com/uoxxoej/Buols1r7u/jquery.infinitescroll.min.js"></script>
 
 		<script>
 			$('#content').infinitescroll({
 				loading: {
-				img: 'http://static.tumblr.com/uoxxoej/dxXls2467/trans.gif',
+				img: '//static.tumblr.com/uoxxoej/dxXls2467/trans.gif',
 				msgText: ' '
 				},
 
